--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -13,25 +13,18 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-
-    - name: Set up Python
+    - name: Set up Python 3.10
       uses: actions/setup-python@v3
-      with:
-        python-version: ${{ matrix.python-version }}
-
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-
     - name: Test with Pytest
       run: |
-        pytest test_test.py
-
+        pytest
     - name: Lint with Pylint
       run: |
         pylint ./utils.py
-
     - name: Format with Black
       run: |
         black --check .
